Add online player list and private chat pages