@@ -7,6 +7,10 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 class AtomChatStateTest {
+    private static NavPage np(AppPage page) {
+        return NavPage.of(page);
+    }
+
     @BeforeEach
     void reset() {
         AtomChatState.reset();
@@ -14,45 +18,45 @@ class AtomChatStateTest {
 
     @Test
     void defaultIsChatList() {
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
     }
 
     @Test
     void saveRestoreRoundTrip() {
-        AtomChatState.save(List.of(AppPage.CHAT_LIST, AppPage.WORLD_CHAT));
-        assertEquals(List.of(AppPage.CHAT_LIST, AppPage.WORLD_CHAT), AtomChatState.snapshot());
+        AtomChatState.save(List.of(np(AppPage.CHAT_LIST), np(AppPage.WORLD_CHAT)));
+        assertEquals(List.of(np(AppPage.CHAT_LIST), np(AppPage.WORLD_CHAT)), AtomChatState.snapshot());
     }
 
     @Test
     void invalidSaveFallsBackToChatList() {
-        AtomChatState.save(List.of(AppPage.WORLD_CHAT));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(List.of(np(AppPage.WORLD_CHAT)));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
 
         AtomChatState.save(List.of());
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
 
         AtomChatState.save(null);
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
     }
 
     @Test
     void saveRejectsRootAfterFirstPage() {
-        AtomChatState.save(List.of(AppPage.CHAT_LIST, AppPage.PROFILE));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(List.of(np(AppPage.CHAT_LIST), np(AppPage.PROFILE)));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
 
-        AtomChatState.save(List.of(AppPage.CHAT_LIST, AppPage.WORLD_CHAT, AppPage.SETTINGS));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(List.of(np(AppPage.CHAT_LIST), np(AppPage.WORLD_CHAT), np(AppPage.SETTINGS)));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
     }
 
     @Test
     void saveRejectsNullAnywhereInStack() {
-        AtomChatState.save(Arrays.asList(null, AppPage.WORLD_CHAT));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(Arrays.asList(null, np(AppPage.WORLD_CHAT)));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
 
-        AtomChatState.save(Arrays.asList(AppPage.CHAT_LIST, null));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(Arrays.asList(np(AppPage.CHAT_LIST), null));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
 
-        AtomChatState.save(Arrays.asList(AppPage.CHAT_LIST, AppPage.WORLD_CHAT, null));
-        assertEquals(List.of(AppPage.CHAT_LIST), AtomChatState.snapshot());
+        AtomChatState.save(Arrays.asList(np(AppPage.CHAT_LIST), np(AppPage.WORLD_CHAT), null));
+        assertEquals(List.of(np(AppPage.CHAT_LIST)), AtomChatState.snapshot());
     }
 }
